--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <link rel="apple-touch-icon" href="/favicon.io" />
   <link rel="shortcut icon" href="/favicon.io" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BYN Hospital Bhiwani</title>
-  <meta name="title" content="BYN Hospital | Best Hospital in Bhiwani" />
+  <title>R&R Hospital Jhunjhunu</title>
+  <meta name="title" content="R&R Hospital Jhunjhunu" />
   <meta name="description"
-    content="BYN Hospital is a leading healthcare provider in Bhiwani, offering advanced medical treatments and state-of-the-art facilities." />
+    content="R&R Hospital is a leading healthcare provider in Bhiwani, offering advanced medical treatments and state-of-the-art facilities." />
   <meta name="keywords"
-    content="Best Hospital in Bhiwani, Multi-speciality hospital Bhiwani, Top hospital in Bhiwani, BYN Hospital, Healthcare Bhiwani" />
+    content="Best Hospital in Bhiwani, Multi-speciality hospital Bhiwani, Top hospital in Bhiwani, R&R Hospital, Healthcare Bhiwani" />
   <meta property="og:image" content="https://pdpl-stuff.s3.ap-south-1.amazonaws.com/dynamic/ksshospitals.com/ONLYVbShaa.webp" />
   <meta name="google-site-verification" content="your-google-site-verification-code" />
-  <meta name="author" content="BYN Hospital Bhiwani">
+  <meta name="author" content="R&R Hospital Bhiwani">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.bynhospital.com/">
 
@@ -56,7 +56,7 @@
 
           const metaAuthor = document.createElement("meta");
           metaAuthor.name = "author";
-          metaAuthor.content = "BYN Hospital Bhiwani";
+          metaAuthor.content = "R&R Hospital Bhiwani";
           document.head.appendChild(metaAuthor);
 
           const metaOgImage = document.querySelector('meta[property="og:image"]');
