--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <title>R&R Hospital Jhunjhunu</title>
   <meta name="title" content="R&R Hospital Jhunjhunu" />
   <meta name="description"
-    content="R&R Hospital is a leading healthcare provider in Bhiwani, offering advanced medical treatments and state-of-the-art facilities." />
+    content="R&R Hospital is a leading healthcare provider in Jhunjhunu, offering advanced medical treatments and state-of-the-art facilities." />
   <meta name="keywords"
-    content="Best Hospital in Bhiwani, Multi-speciality hospital Bhiwani, Top hospital in Bhiwani, R&R Hospital, Healthcare Bhiwani" />
+    content="Best Hospital in Jhunjhunu, Multi-speciality hospital Jhunjhunu, Top hospital in Jhunjhunu, R&R Hospital, Healthcare Jhunjhunu" />
   <meta property="og:image" content="https://pdpl-stuff.s3.ap-south-1.amazonaws.com/dynamic/ksshospitals.com/ONLYVbShaa.webp" />
   <meta name="google-site-verification" content="your-google-site-verification-code" />
-  <meta name="author" content="R&R Hospital Bhiwani">
+  <meta name="author" content="R&R Hospital Jhunjhunu">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.bynhospital.com/">
 
@@ -56,12 +56,12 @@
 
           const metaAuthor = document.createElement("meta");
           metaAuthor.name = "author";
-          metaAuthor.content = "R&R Hospital Bhiwani";
+          metaAuthor.content = "R&R Hospital Jhunjhunu";
           document.head.appendChild(metaAuthor);
 
           const metaOgImage = document.querySelector('meta[property="og:image"]');
           if (metaOgImage) {
-            metaOgImage.setAttribute("content", siteMeta.meta_image || "https://your-image-url.com/byn-hospital-bhiwani.png");
+            metaOgImage.setAttribute("content", siteMeta.meta_image || "https://your-image-url.com/byn-hospital-Jhunjhunu.png");
           }
         }
       } catch (error) {
