--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     content="R&R Hospital is a leading healthcare provider in Jhunjhunu, offering advanced medical treatments and state-of-the-art facilities." />
   <meta name="keywords"
     content="Best Hospital in Jhunjhunu, Multi-speciality hospital Jhunjhunu, Top hospital in Jhunjhunu, R&R Hospital, Healthcare Jhunjhunu" />
-  <meta property="og:image" content="https://pdpl-stuff.s3.ap-south-1.amazonaws.com/dynamic/ksshospitals.com/ONLYVbShaa.webp" />
+  <meta property="og:image" content="./R-and-R Hospital.png" />
   <meta name="google-site-verification" content="your-google-site-verification-code" />
   <meta name="author" content="R&R Hospital Jhunjhunu">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://www.bynhospital.com/">
+  <link rel="canonical" href="https://www.rrhospital.com/">
 
   <script>
     (function (w, d, s, l, i) {
@@ -32,7 +32,7 @@
     // -----dynamic-metatags-----------
     document.addEventListener("DOMContentLoaded", async function () {
       try {
-        const response = await fetch("https://www.bynhospital.com/meta/get-meta");
+        const response = await fetch("https://www.rrhospital.com/meta/get-meta");
         const data = await response.json();
         const siteMeta = data.response.metaInf.find((site) => site.site_name === "bynhospital.com");
 
