--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     content="R&R Hospital is a leading healthcare provider in Jhunjhunu, offering advanced medical treatments and state-of-the-art facilities." />
   <meta name="keywords"
     content="Best Hospital in Jhunjhunu, Multi-speciality hospital Jhunjhunu, Top hospital in Jhunjhunu, R&R Hospital, Healthcare Jhunjhunu" />
-  <meta property="og:image" content="./R-and-R Hospital.png" />
+  <meta property="og:image" content="./R-and-R Hospital.webp" />
   <meta name="google-site-verification" content="your-google-site-verification-code" />
   <meta name="author" content="R&R Hospital Jhunjhunu">
   <meta name="robots" content="index, follow">
@@ -61,7 +61,7 @@
 
           const metaOgImage = document.querySelector('meta[property="og:image"]');
           if (metaOgImage) {
-            metaOgImage.setAttribute("content", siteMeta.meta_image || "./R-and-R Hospital.png");
+            metaOgImage.setAttribute("content", siteMeta.meta_image || "./R-and-R Hospital.webp");
           }
         }
       } catch (error) {
