--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="google-site-verification" content="your-google-site-verification-code" />
   <meta name="author" content="R&R Hospital Jhunjhunu">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://www.rrhospital.com/">
+  <link rel="canonical" href="https://www.rr-hospital.com/">
 
   <script>
     (function (w, d, s, l, i) {
@@ -32,9 +32,9 @@
     // -----dynamic-metatags-----------
     document.addEventListener("DOMContentLoaded", async function () {
       try {
-        const response = await fetch("https://www.rrhospital.com/meta/get-meta");
+        const response = await fetch("https://www.rr-hospital.com/meta/get-meta");
         const data = await response.json();
-        const siteMeta = data.response.metaInf.find((site) => site.site_name === "rrhospital.com");
+        const siteMeta = data.response.metaInf.find((site) => site.site_name === "rr-hospital.com");
 
         if (siteMeta) {
           document.title = siteMeta.meta_title;
