--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <link rel="shortcut icon" href="/favicon.io" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>R&R Hospital Jhunjhunu</title>
-  <meta name="title" content="R&R Hospital Jhunjhunu" />
+  <title>R&R Multispecialty Hospital Jhunjhunu</title>
+  <meta name="title" content="R&R Multispecialty Hospital Jhunjhunu" />
   <meta name="description"
-    content="R&R Hospital is a leading healthcare provider in Jhunjhunu, offering advanced medical treatments and state-of-the-art facilities." />
+    content="R&R Multispecialty Hospital is a leading healthcare provider in Jhunjhunu, offering advanced medical treatments and state-of-the-art facilities." />
   <meta name="keywords"
-    content="Best Hospital in Jhunjhunu, Multi-speciality hospital Jhunjhunu, Top hospital in Jhunjhunu, R&R Hospital, Healthcare Jhunjhunu" />
+    content="Best Hospital in Jhunjhunu, Multi-speciality hospital Jhunjhunu, Top hospital in Jhunjhunu, R&R Multispecialty Hospital, Healthcare Jhunjhunu" />
   <meta property="og:image" content="./R-and-R Hospital.webp" />
   <meta name="google-site-verification" content="v_eXJaaeXb7F5tHHvsOHt___eVqPllKwfW6Kz_ztXXY" />
   <meta name="google-site-verification" content="v_eXJaaeXb7F5tHHvsOHt___eVqPllKwfW6Kz_ztXXY" />
-  <meta name="author" content="R&R Hospital Jhunjhunu" />
+  <meta name="author" content="R&R Multispecialty Hospital Jhunjhunu" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://www.rr-hospital.com/" />
 
@@ -49,7 +49,7 @@
 
           const metaAuthor = document.createElement("meta");
           metaAuthor.name = "author";
-          metaAuthor.content = "R&R Hospital Jhunjhunu";
+          metaAuthor.content = "R&R Multispecialty Hospital Jhunjhunu";
           document.head.appendChild(metaAuthor);
 
           const metaOgImage = document.querySelector('meta[property="og:image"]');
