--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="/favicon.io" />
-  <link rel="apple-touch-icon" href="/favicon.io" />
-  <link rel="shortcut icon" href="/favicon.io" type="image/x-icon" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/favicon.ico" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>R&R Multispecialty Hospital Jhunjhunu</title>
+
   <meta name="title" content="R&R Multispecialty Hospital Jhunjhunu" />
   <meta name="description"
     content="R&R Multispecialty Hospital is a leading healthcare provider in Jhunjhunu, offering advanced medical treatments and state-of-the-art facilities." />
   <meta name="keywords"
     content="Best Hospital in Jhunjhunu, Multi-speciality hospital Jhunjhunu, Top hospital in Jhunjhunu, R&R Multispecialty Hospital, Healthcare Jhunjhunu" />
-  <!-- Open Graph / Facebook -->
+
+  <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.rr-hospital.com/" />
   <meta property="og:title" content="R&R Multispecialty Hospital Jhunjhunu" />
-  <meta property="og:description" content="R&R Multispecialty Hospital is a leading healthcare provider in Jhunjhunu, offering advanced medical treatments and state-of-the-art facilities." />
-  <meta property="og:image" content="https://www.rr-hospital.com/R-and-R%20Hospital.webp" />
+  <meta property="og:description"
+    content="R&R Multispecialty Hospital is a leading healthcare provider in Jhunjhunu, offering advanced medical treatments and state-of-the-art facilities." />
+  <meta property="og:image" content="https://www.rr-hospital.com/R-and-RHospital.webp" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="R&R Multispecialty Hospital" />
@@ -28,58 +32,137 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://www.rr-hospital.com/" />
   <meta name="twitter:title" content="R&R Multispecialty Hospital Jhunjhunu" />
-  <meta name="twitter:description" content="R&R Multispecialty Hospital is a leading healthcare provider in Jhunjhunu, offering advanced medical treatments and state-of-the-art facilities." />
-  <meta name="twitter:image" content="https://www.rr-hospital.com/R-and-R%20Hospital.webp" />
+  <meta name="twitter:description"
+    content="R&R Multispecialty Hospital is a leading healthcare provider in Jhunjhunu, offering advanced medical treatments and state-of-the-art facilities." />
+  <meta name="twitter:image" content="https://www.rr-hospital.com/R-and-RHospital.webp" />
 
-  <meta name="google-site-verification" content="v_eXJaaeXb7F5tHHvsOHt___eVqPllKwfW6Kz_ztXXY" />
+  <meta name="google-site-verification" content="zSDO5L4-1Y94nb-fdhXOKpMuqU46FlaYSpyL7LrP6Mw" />
   <meta name="author" content="R&R Multispecialty Hospital Jhunjhunu" />
   <meta name="robots" content="index, follow" />
   <meta name="geo.region" content="IN-RJ" />
   <meta name="geo.placename" content="Jhunjhunu" />
+
   <link rel="canonical" href="https://www.rr-hospital.com/" />
 
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E93BW7SRFZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-E93BW7SRFZ');
+    gtag("js", new Date());
+    gtag("config", "G-E93BW7SRFZ");
   </script>
 
   <!-- Structured Data -->
   <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Hospital",
-      "name": "R&R Multispecialty Hospital",
-      "alternateName": "R&R Hospital",
-      "url": "https://www.rr-hospital.com",
-      "logo": "https://www.rr-hospital.com/R-and-R-logo.webp",
-      "image": "https://www.rr-hospital.com/R-and-R%20Hospital.webp",
-      "description": "R&R Multispecialty Hospital is a leading healthcare provider in Jhunjhunu, offering advanced medical treatments and state-of-the-art facilities.",
-      "address": {
-        "@type": "PostalAddress",
-        "addressLocality": "Jhunjhunu",
-        "addressRegion": "Rajasthan",
-        "addressCountry": "IN"
+  {
+    "@context": "https://schema.org",
+    "@type": "Hospital",
+    "name": "RR Hospital",
+    "url": "https://rr-hospital.com/",
+    "logo": "https://www.rr-hospital.com/R-and-R-logo.webp",
+    "image": "https://www.rr-hospital.com/R-and-RHospital.webp",
+    "description": "RR Hospital is a multi-speciality hospital offering advanced healthcare services including General Medicine, Radiology, Orthopaedics, Gynecology, Emergency, and Laboratory services in Jhunjhunu.",
+    "telephone": "+91-8432755555",
+    "email": "contact@rrmhospitals.com",
+
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "23, Churu Road, Basant Vihar",
+      "addressLocality": "Jhunjhunu",
+      "addressRegion": "Rajasthan",
+      "postalCode": "333001",
+      "addressCountry": "IN"
+    },
+
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "28.133439",
+      "longitude": "75.38284"
+    },
+
+    "openingHoursSpecification": [
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "00:00",
+        "closes": "23:59"
+      }
+    ],
+
+    "medicalSpecialty": [
+      "General Surgery",
+      "Orthopaedics",
+      "Radiology",
+      "General Medicine",
+      "Gynecology",
+      "Urology",
+      "Dental",
+      "Physiotherapy"
+    ],
+
+    "specialities": [
+      {
+        "@type": "MedicalSpecialty",
+        "name": "General Surgery",
+        "url": "https://rr-hospital.com/speciality/general%20surgery"
       },
-      "telephone": "+91-XXX-XXX-XXXX",
-      "priceRange": "$$",
-      "medicalSpecialty": [
-        "Cardiology",
-        "Orthopedics",
-        "Neurology",
-        "Oncology",
-        "Pediatrics",
-        "General Surgery"
-      ],
-      "sameAs": [
-        "https://www.facebook.com/rrhospital",
-        "https://www.twitter.com/rrhospital"
-      ]
+      {
+        "@type": "MedicalSpecialty",
+        "name": "Orthopaedics",
+        "url": "https://rr-hospital.com/speciality/orthopaedics"
+      },
+      {
+        "@type": "MedicalSpecialty",
+        "name": "Radiology",
+        "url": "https://rr-hospital.com/speciality/radiology"
+      },
+      {
+        "@type": "MedicalSpecialty",
+        "name": "Gynecology",
+        "url": "https://rr-hospital.com/speciality/gynecology"
+      },
+      {
+        "@type": "MedicalSpecialty",
+        "name": "General Medicine",
+        "url": "https://rr-hospital.com/speciality/general%20medicine"
+      },
+      {
+        "@type": "MedicalSpecialty",
+        "name": "Urology",
+        "url": "https://rr-hospital.com/speciality/urology"
+      },
+      {
+        "@type": "MedicalSpecialty",
+        "name": "Dental",
+        "url": "https://rr-hospital.com/speciality/dental"
+      },
+      {
+        "@type": "MedicalSpecialty",
+        "name": "Physiotherapy",
+        "url": "https://rr-hospital.com/speciality/physiotherapy"
+      }
+    ],
+
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+91-8432755555",
+      "contactType": "customer service",
+      "areaServed": "IN",
+      "availableLanguage": ["English", "Hindi"]
     }
+  }
   </script>
 
+  <!-- Fetching Meta From API -->
   <script>
     document.addEventListener("DOMContentLoaded", async function () {
       try {
@@ -99,14 +182,9 @@
           const metaTitle = document.querySelector('meta[name="title"]');
           if (metaTitle) metaTitle.setAttribute("content", siteMeta.meta_title);
 
-          const metaAuthor = document.createElement("meta");
-          metaAuthor.name = "author";
-          metaAuthor.content = "R&R Multispecialty Hospital Jhunjhunu";
-          document.head.appendChild(metaAuthor);
-
           const metaOgImage = document.querySelector('meta[property="og:image"]');
           if (metaOgImage) {
-            metaOgImage.setAttribute("content", siteMeta.meta_image || "https://www.rr-hospital.com/R-and-R%20Hospital.webp");
+            metaOgImage.setAttribute("content", siteMeta.meta_image || "https://www.rr-hospital.com/R-and-RHospital.webp");
           }
         }
       } catch (error) {
